<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>mc.rellox</groupId>
  <artifactId>SpawnerMeta</artifactId>
  <version>22.5</version>
  <packaging>jar</packaging>
  
  <name>SpawnerMeta</name>
  <description>Implements spawner customization and upgrading</description>
  
  <properties>
	  <java.version>17</java.version>
  </properties>
  
  <repositories>
  	<repository>
	  <id>jitpack.io</id>
	  <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>bg-repo</id>
      <url>https://repo.bg-software.com/repository/api/</url>
    </repository>
  </repositories>
	
  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.20.4-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
	  <groupId>com.github.brcdev-minecraft</groupId>
	  <artifactId>shopgui-api</artifactId>
	  <version>3.0.0</version>
	  <scope>provided</scope>
	</dependency>
    <dependency>
      <groupId>com.github.MilkBowl</groupId>
      <artifactId>VaultAPI</artifactId>
      <version>1.7.1</version>
      <scope>provided</scope>
	</dependency>
	<dependency>
      <groupId>com.bgsoftware</groupId>
      <artifactId>WildStackerAPI</artifactId>
      <version>2023.2</version>
      <scope>provided</scope>
    </dependency>
	<dependency>
      <groupId>com.bgsoftware</groupId>
      <artifactId>WildToolsAPI</artifactId>
      <version>2023.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.bgsoftware</groupId>
      <artifactId>SuperiorSkyblockAPI</artifactId>
      <version>2023.3</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
		   <source>17</source>
		   <target>17</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>